Hooks now namespaced classes. Adding firebase libs.

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     }
   ],
   "require": {
-    "getherbert/framework": "dev-dev"
+    "getherbert/framework": "dev-dev",
+    "ktamas77/firebase-php": "dev-master"
   },
   "config": {
     "preferred-install": "dist"
