Admin action/filters. Getting JWT  for firebase. Adding ajax call for row enhacement. Adding columm to Poll for entries

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
   ],
   "require": {
     "getherbert/framework": "dev-dev",
-    "ktamas77/firebase-php": "dev-master"
+    "ktamas77/firebase-php": "dev-master",
+    "firebase/token-generator": "^2.0"
   },
   "config": {
     "preferred-install": "dist"
