--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "ktamas77/firebase-php": "dev-master",
     "firebase/token-generator": "^2.0"
   },
+  "minimum-stability": "dev",
   "config": {
     "preferred-install": "dist"
   },
