--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "gulp-livereload": "^3.8.0",
     "browserify": "^11.0.1",
     "vinyl-source-stream": "^1.1.0",
-    "babelify": "^6.3.0"
+    "babelify": "^6.3.0",
+    "imports-loader": "^0.6.4"
   },
   "dependencies": {
     "backbone": "~1.1.2",
@@ -40,7 +41,6 @@
     "jquery-latest": "~1.9.0",
     "query-string": "^2.4.0",
     "react-prefixr": "^0.1.0",
-    "store": "^1.3.17",
     "react-router": "^0.13.3",
     "react-window-mixins": "0.0.6",
     "timeago": "^1.4.2",
@@ -48,6 +48,7 @@
     "stylify": "^1.3.1",
     "react": "^0.13.3",
     "react-dnd": "^1.1.5",
-    "add-commas": "0.0.4"
+    "add-commas": "0.0.4",
+    "store": "git://github.com/marcuswestin/store.js#master"
   }
 }
